--- a/isaac_ros_pointcloud_interfaces/CMakeLists.txt
+++ b/isaac_ros_pointcloud_interfaces/CMakeLists.txt
@@ -52,4 +52,4 @@ ament_index_get_resource(ISAAC_ROS_COMMON_CMAKE_PATH isaac_ros_common_cmake_path
 include("${ISAAC_ROS_COMMON_CMAKE_PATH}/isaac_ros_common-version-info.cmake")
 generate_version_info(${PROJECT_NAME})
 
-ament_auto_package()
+ament_auto_package(USE_SCOPED_HEADER_INSTALL_DIR)
