--- a/isaac_ros_r2b_galileo/CMakeLists.txt
+++ b/isaac_ros_r2b_galileo/CMakeLists.txt
@@ -47,4 +47,4 @@ ament_index_get_resource(ISAAC_ROS_COMMON_CMAKE_PATH isaac_ros_common_cmake_path
 include("${ISAAC_ROS_COMMON_CMAKE_PATH}/isaac_ros_common-version-info.cmake")
 generate_version_info(${PROJECT_NAME})
 
-ament_auto_package(INSTALL_TO_SHARE ${CMAKE_CURRENT_BINARY_DIR}/data)
+ament_auto_package(INSTALL_TO_SHARE ${CMAKE_CURRENT_BINARY_DIR}/data USE_SCOPED_HEADER_INSTALL_DIR)
