--- a/isaac_ros_test_cmake/CMakeLists.txt
+++ b/isaac_ros_test_cmake/CMakeLists.txt
@@ -58,4 +58,4 @@ ament_index_get_resource(ISAAC_ROS_COMMON_CMAKE_PATH isaac_ros_common_cmake_path
 include("${ISAAC_ROS_COMMON_CMAKE_PATH}/isaac_ros_common-version-info.cmake")
 generate_version_info(${PROJECT_NAME})
 
-ament_auto_package(INSTALL_TO_SHARE test resources isaac_ros_test_cmake)
+ament_auto_package(INSTALL_TO_SHARE test resources isaac_ros_test_cmake USE_SCOPED_HEADER_INSTALL_DIR)
